--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -43,7 +43,7 @@ jobs:
   msvc:
     name: 'msvc (${{ matrix.name }})'
     runs-on: windows-latest
-    timeout-minutes: 30
+    timeout-minutes: 45
     strategy:
       matrix:
         include:
@@ -76,6 +76,13 @@ jobs:
           type: 'Debug'
           tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
           config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DENABLE_ARES=ON'
+        - name: 'no-ssl uwp'
+          install: 'zstd zlib'
+          arch: 'x64'
+          plat: 'uwp'
+          type: 'Debug'
+          tflags: 'skipall'
+          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON'
         - name: 'no-ssl-idn2'
           install: 'zstd zlib libidn2'
           arch: 'x64'
@@ -132,7 +139,7 @@ jobs:
           vcpkg/bootstrap-vcpkg.sh
 
       - name: 'vcpkg build'
-        timeout-minutes: 30
+        timeout-minutes: 25
         shell: bash
         run: |
           export VCPKG_ROOT="$PWD/vcpkg"
@@ -152,19 +159,12 @@ jobs:
         timeout-minutes: 5
         shell: bash
         run: |
-          if [ '${{ matrix.plat }}' = 'uwp' ]; then
-            system='WindowsStore'
-            options='-DCMAKE_SYSTEM_VERSION=10.0'
-          else
-            system='Windows'
-          fi
           export VCPKG_ROOT="$PWD/vcpkg"
-          cmake . -B bld ${options} \
+          cmake . -B bld \
             -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
             -DVCPKG_INSTALLED_DIR=$VCPKG_ROOT/installed \
             -DVCPKG_TARGET_TRIPLET=${{ matrix.arch }}-${{ matrix.plat }} \
             -DCMAKE_BUILD_TYPE=${{ matrix.type }} \
-            -DCMAKE_SYSTEM_NAME=$system \
             -DCMAKE_VS_GLOBALS=TrackFileAccess=false \
             -DCMAKE_UNITY_BUILD=ON \
             -DCURL_WERROR=ON \
