--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -41,9 +41,9 @@ permissions: {}
 
 jobs:
   msvc:
-    name: 'msvc (${{ matrix.name }})'
+    name: 'msvc (${{ matrix.arch }}, ${{ matrix.plat }}, ${{ matrix.name }})'
     runs-on: windows-latest
-    timeout-minutes: 45
+    timeout-minutes: 30
     strategy:
       matrix:
         include:
@@ -54,7 +54,7 @@ jobs:
           plat: 'windows'
           type: 'Debug'
           tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=ON  -DCURL_USE_SCHANNEL=ON -DCURL_ZSTD=ON -DUSE_NGHTTP2=ON -DBUILD_SHARED_LIBS=OFF -DCURL_USE_LIBSSH2=ON'
+          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=ON  -DCURL_USE_SCHANNEL=ON  -DCURL_ZSTD=ON -DUSE_NGHTTP2=ON -DBUILD_SHARED_LIBS=OFF -DCURL_USE_LIBSSH2=ON'
         - name: 'openssl'
           install: 'zstd zlib nghttp2 nghttp3 openssl libssh2'
           arch: 'x64'
@@ -62,63 +62,13 @@ jobs:
           type: 'Debug'
           tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
           config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DUSE_NGHTTP2=ON -DBUILD_SHARED_LIBS=OFF -DCURL_USE_LIBSSH2=ON -DCURL_USE_OPENSSL=ON -DUSE_OPENSSL_QUIC=ON'
-        - name: 'no-ssl-brotli'
-          install: 'zstd zlib brotli'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DCURL_BROTLI=ON'
-        - name: 'no-ssl-c-ares'
-          install: 'zstd zlib c-ares'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DENABLE_ARES=ON'
-        - name: 'no-ssl uwp'
-          install: 'zstd zlib'
-          arch: 'x64'
-          plat: 'uwp'
-          type: 'Debug'
-          tflags: 'skipall'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON'
-        - name: 'no-ssl-idn2'
-          install: 'zstd zlib libidn2'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DUSE_LIBIDN2=ON'
-        - name: 'no-ssl-idn'
+        - name: 'no ssl'
           install: 'zstd zlib'
           arch: 'x64'
           plat: 'windows'
           type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307 ~165 ~1448 ~2046 ~2047'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DUSE_WIN32_IDN=ON'
-        - name: 'no-ssl-psl'
-          install: 'zstd zlib libpsl'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
           tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DCURL_USE_LIBPSL=ON'
-        - name: 'wolfssl'
-          install: 'zstd zlib nghttp2 wolfssl libssh2'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DUSE_NGHTTP2=ON -DBUILD_SHARED_LIBS=OFF -DCURL_USE_WOLFSSL=ON -DCURL_USE_LIBSSH2=ON'
-        - name: 'mbedtls'
-          install: 'zstd zlib nghttp2 mbedtls libssh2'
-          arch: 'x64'
-          plat: 'windows'
-          type: 'Debug'
-          tflags: '~1516 ~2301 ~2302 ~2303 ~2307'
-          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DUSE_NGHTTP2=ON -DBUILD_SHARED_LIBS=OFF -DCURL_USE_MBEDTLS=ON -DCURL_USE_LIBSSH2=ON'
-
+          config: '-DENABLE_DEBUG=ON -DENABLE_UNICODE=OFF -DCURL_USE_SCHANNEL=OFF -DCURL_ZSTD=ON -DHTTP_ONLY=ON'
       fail-fast: false
     steps:
       - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -131,7 +81,7 @@ jobs:
           restore-keys: ${{ matrix.plat }}-${{ matrix.name }}
 
       - name: 'vcpkg init'
-        timeout-minutes: 5      
+        timeout-minutes: 5
         if: success()
         shell: bash
         run: |
@@ -139,7 +89,7 @@ jobs:
           vcpkg/bootstrap-vcpkg.sh
 
       - name: 'vcpkg build'
-        timeout-minutes: 25
+        timeout-minutes: 10
         shell: bash
         run: |
           export VCPKG_ROOT="$PWD/vcpkg"
@@ -147,6 +97,7 @@ jobs:
           mkdir -p "$CURRENT_BINARY_CACHE"
           export VCPKG_BINARY_SOURCES="clear;files,$GITHUB_WORKSPACE/$CURRENT_BINARY_CACHE,readwrite;"
           vcpkg/vcpkg x-set-installed ${{ matrix.install }} --triplet=${{ matrix.arch }}-${{ matrix.plat }}
+          false
 
       - name: 'save cache dependencies'
         id: cache-save
@@ -159,12 +110,19 @@ jobs:
         timeout-minutes: 5
         shell: bash
         run: |
+          if [ '${{ matrix.plat }}' = 'uwp' ]; then
+            system='WindowsStore'
+            options='-DCMAKE_SYSTEM_VERSION=10.0'
+          else
+            system='Windows'
+          fi
           export VCPKG_ROOT="$PWD/vcpkg"
-          cmake . -B bld \
-            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
-            -DVCPKG_INSTALLED_DIR=$VCPKG_ROOT/installed \
-            -DVCPKG_TARGET_TRIPLET=${{ matrix.arch }}-${{ matrix.plat }} \
-            -DCMAKE_BUILD_TYPE=${{ matrix.type }} \
+          cmake -B bld ${options} \
+            "-DCMAKE_SYSTEM_NAME=${system}" \
+            "-DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake" \
+            "-DVCPKG_INSTALLED_DIR=$VCPKG_ROOT/installed" \
+            '-DVCPKG_TARGET_TRIPLET=${{ matrix.arch }}-${{ matrix.plat }}' \
+            '-DCMAKE_BUILD_TYPE=${{ matrix.type }}' \
             -DCMAKE_VS_GLOBALS=TrackFileAccess=false \
             -DCMAKE_UNITY_BUILD=ON \
             -DCURL_WERROR=ON \
@@ -182,7 +140,7 @@ jobs:
           export VCPKG_ROOT="$GITHUB_WORKSPACE/vcpkg"
           mkdir -p bld
           7z a -t7z -r -mx=9 logs.7z \
-            $VCPKG_ROOT/buildtrees/*.log \
+            "$VCPKG_ROOT"/buildtrees/*.log \
             bld/.ninja_log \
             bld/build.ninja \
             bld/install_manifest.txt \
@@ -203,9 +161,9 @@ jobs:
         run: |
           cmake --build bld --config '${{ matrix.type }}' --parallel 5
           export VCPKG_ROOT="$PWD/vcpkg"
-          export VCPKG_TRIPLED_DIR="$VCPKG_ROOT/installed/${{ matrix.arch }}-${{ matrix.plat }}"
-          export debug_lib="$VCPKG_TRIPLED_DIR/debug/bin"
-          export release_lib="$VCPKG_TRIPLED_DIR/bin"
+          export VCPKG_TRIPLET_DIR="$VCPKG_ROOT/installed/${{ matrix.arch }}-${{ matrix.plat }}"
+          export debug_lib="$VCPKG_TRIPLET_DIR/debug/bin"
+          export release_lib="$VCPKG_TRIPLET_DIR/bin"
           export PATH="$PWD/bld/lib/:$release_lib:$debug_lib:$PATH"
           bld/src/curl.exe --disable --version
 
@@ -223,8 +181,8 @@ jobs:
         run: |
           export TFLAGS='-j14 !TFTP !MQTT !WebSockets ${{ matrix.tflags }}'
           export VCPKG_ROOT="$PWD/vcpkg"
-          export VCPKG_TRIPLED_DIR="$VCPKG_ROOT/installed/${{ matrix.arch }}-${{ matrix.plat }}"
-          export debug_lib="$VCPKG_TRIPLED_DIR/debug/bin"
-          export release_lib="$VCPKG_TRIPLED_DIR/bin"
+          export VCPKG_TRIPLET_DIR="$VCPKG_ROOT/installed/${{ matrix.arch }}-${{ matrix.plat }}"
+          export debug_lib="$VCPKG_TRIPLET_DIR/debug/bin"
+          export release_lib="$VCPKG_TRIPLET_DIR/bin"
           export PATH="$PWD/bld/lib/:$release_lib:$debug_lib:$PATH"
           cmake --build bld --config '${{ matrix.type }}' --target test-ci
