--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -727,6 +727,7 @@ jobs:
           git -C "$VCPKG_INSTALLATION_ROOT" remote add dg0yt https://github.com/dg0yt/vcpkg
           git -C "$VCPKG_INSTALLATION_ROOT" fetch --all
           git -C "$VCPKG_INSTALLATION_ROOT" switch libressl
+          git -C "$VCPKG_INSTALLATION_ROOT" pull
           "$VCPKG_INSTALLATION_ROOT/bootstrap-vcpkg.bat"
           git -C "$VCPKG_INSTALLATION_ROOT" show --no-patch --format='%H %ai'
           vcpkg version
@@ -739,6 +740,20 @@ jobs:
           export SystemRoot="$SYSTEMROOT"
           export windir="$WINDIR"
           vcpkg x-set-installed ${{ matrix.install }} '--triplet=${{ matrix.arch }}-${{ matrix.plat }}'
+
+      - name: Prepare logs on failure
+        if: failure()
+        shell: bash
+        run: |
+          7z a -t7z -r -mx=9 logs.7z \
+              $VCPKG_INSTALLATION_ROOT/buildtrees/*.log
+
+      - name: Upload logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows_logs_${{github.event.pull_request.head.sha}}
+          path: logs.7z
 
       - name: 'cmake configure'
         timeout-minutes: 5
