--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -808,9 +808,9 @@ jobs:
         run: |
           # GnuTLS is not fully functional on Windows, so skip the tests
           # https://github.com/ShiftMediaProject/gnutls/issues/23
-          # if [[ '${{ matrix.name }}' != *'gnutls'* ]]; then
+          if [[ '${{ matrix.name }}' != *'gnutls'* ]]; then
             /c/ProgramData/chocolatey/choco.exe install --yes --no-progress --limit-output --timeout 180 --force stunnel openssh || true
-          # fi
+          fi
           curl --disable --fail --silent --show-error --connect-timeout 15 --max-time 60 --retry 3 https://live.sysinternals.com/handle64.exe --output /bin/handle64.exe
           python3 -m pip --disable-pip-version-check --no-input --no-cache-dir install --progress-bar off --prefer-binary impacket
 
