--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -692,7 +692,7 @@ jobs:
             arch: 'x64'
             plat: 'windows'
             type: 'Debug'
-            tflags: '~1516 !1909'
+            tflags: '~1516 !1909 !1916'
             # WARNING: libssh uses hard-coded world-writable paths (/etc/..., ~/.ssh/) to
             #          read its configuration from, making it vulnerable to attacks on
             #          Windows. Do not use this component till there is a fix for these.
